org.mmisw.voc2rdf II 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-06 (2.0.alpha5)
	- Disable GUI input elements while converting.
	- Better "conversion OK" message
	
	
2008-11-05
	- Some GUI improvements.
	
	- Fixed 26: URIs in voc2rdf owl files still have _tmp_ in them:
		Converter: The primary class should be lowercased:
		     finalUri += "/" + getPrimaryClass().toLowerCase()
		so no "j.0" namespace is generated, and instead the definitions are
		associated with the ontology itself.  (subtle!)
		
	
	
2008-11-04 (2.0.alpha3)
	- Integration with ontmd
	
	- Everything working pretty nicely! :-)
	
	TODO: Unify replicated code with ontmd !!
	

2008-10-27 (2.0.alpha1)

	- Complete new layout based on tabs:
		Vocabulary: with contents of the vocabulary including optional tabular for inspection
		Metadata: with subtabs for the various metadata groups
		Conversion: to allow namespace root and show RDF result
		Upload: to capture user login and perform upload to the registry
	- More flexible mechanism to associate metadata attributes (not just a fixes set of
	  DC ones). Currently using some of the properties defined in Omv and OmvMmi.

	- "test conversion" button on vocabPanel: it now runs the conversion in a dialog; it uses 
	the example values for the required metadata attributes.
	  		
	- ConversionPanel: Simplified: fixed namespace root ("http://mmisw.org/ont)
	
	- Upload/user panels: Now, user first logs in to the registry using his/her username (not
	  userId) and password. This action obtains a sessionId and the userId than can be used for
	  the actual upload.
	  
	- Several other changes.
	
	TODO:
		- doUpload: check response and show more user-friendly message
		
	
2008-10-24
	- Because of problems to use the java sources in:
	  http://mmi.cvs.sourceforge.net/viewvc/mmi/org.mmi.ont.voc2owl/src/org/mmi/ont/voc2owl/trans/
	  I asked Luis to make sure the repository is up to date... well, there were uncommitted changes!