@@ -3,6 +3,9 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-09 (0.1.alpha7)
+	- New tooltip handling via an "?" icon.
+
 2008-11-06 (2.0.alpha5)
 	- Disable GUI input elements while converting.
 	- Better "conversion OK" message
